# qidao

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/chessarena/: MainActivitySmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pikafish_jni.cpp
app/src/main/cpp/pikafish/: main.cpp  thread.h
app/src/main/java/com/example/chessarena/: MainActivity.kt  Navigation.kt  NavigationKeys.kt
app/src/main/java/com/example/chessarena/audio/: SoundManager.kt
app/src/main/java/com/example/chessarena/data/: DataRepository.kt  GamePreferences.kt  GameRecord.kt
app/src/main/java/com/example/chessarena/engine/: AppContext.kt  EngineInterface.kt  GomokuEngine.kt  PikafishJni.kt  TranspositionTable.kt  XiangqiEngine.kt  ZobristHash.kt
app/src/main/java/com/example/chessarena/theme/: Color.kt  DesignSystem.kt  Theme.kt  Type.kt
app/src/main/java/com/example/chessarena/viewmodel/: GomokuViewModel.kt  SettingsViewModel.kt  XiangqiViewModel.kt
app/src/main/java/com/wind23/slowrenju/: GlobalValue.kt
app/src/main/res/drawable/: ic_back_leaf.xml  ic_brain_pikafish.xml  ic_brain_slowrenju.xml  ic_difficulty_cloud.xml  ic_haptic_ripple.xml  ic_haptic_ripple_disabled.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_logo_zen.xml  ic_reset_chaos.xml  ic_resign_flag.xml  ic_setting_bagua.xml  ic_sound_guqin.xml  ic_sound_guqin_muted.xml  ic_undo_reincarnation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/chessarena/engine/: GomokuEngineTest.kt  (+1 more)
gradle/: libs.versions.toml
scratch/: analyze_board.py  last_android_qa_dir.txt
scratch/android-qa-20260523-123033/: cpuinfo-summary.txt  gfxinfo-after-reinstall.txt  gfxinfo.txt  gomoku-after-move-ui.xml  gomoku-dialog-ui.xml  gomoku-started-ui.xml  home-ui.xml  logcat.txt  meminfo.txt  xiangqi-after-move-ui.xml  xiangqi-started-ui.xml
(+27 files in other folders)
